--- a/Views/_ViewImports.cshtml
+++ b/Views/_ViewImports.cshtml
@@ -1,3 +1,5 @@
 ﻿@using SklepAI
 @using SklepAI.Models
-@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@using SklepAI.Infrastructure
+@using SklepAI.Models.ViewModels
+@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers 
