--- a/Views/_ViewImports.cshtml
+++ b/Views/_ViewImports.cshtml
@@ -2,4 +2,6 @@
 @using SklepAI.Models
 @using SklepAI.Infrastructure
 @using SklepAI.Models.ViewModels
-@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers 
+
+@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@addTagHelper SklepAI.Infrastructure.*, SklepAI
