- added admin panel with products management

--- a/Views/Account/Login.cshtml
+++ b/Views/Account/Login.cshtml
@@ -1,6 +1,6 @@
 ﻿@model LoginModel
 @{
-    ViewBag.Title = "Logowanie"; 
+    ViewBag.Title = "Login"; 
 }
 
 <div class="text-danger" asp-validation-summary="All"></div>
