--- a/Views/Products/Details.cshtml
+++ b/Views/Products/Details.cshtml
@@ -2,7 +2,7 @@
 
 @{
     Layout = "_Layout";
-    ViewBag.Title = Model.Selected.Name;
+    ViewBag.Title = Model.Selected?.Name;
 }
 <div class="jumbotron container">
     <p class="h5">
