--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -26,6 +26,9 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Products" asp-action="List">Store</a>
                         </li>
                     </ul>
+                    <div class="justify-content-center">
+                        @await Component.InvokeAsync("CartSummary")
+                    </div>
                     <partial name="_LoginPartial" />
                 </div>
             </div>
