- added administrator tools for managing orders and shipments

--- a/Views/Admin/Index.cshtml
+++ b/Views/Admin/Index.cshtml
@@ -5,8 +5,10 @@
 
 <nav class="navbar navbar-light bg-light">
     <form class="container-fluid justify-content-start">
-        <a asp-action="CreateProduct" class="btn btn-outline-success me-2" type="button">Add product</a>
-        <a asp-action="LoadFromCsv" class="btn btn-sm btn-outline-secondary" type="button">Load from csv</a>
+        <a asp-action="CreateProduct" class="btn btn-outline-secondary me-2" type="button">Add product</a>
+        <a asp-action="LoadFromCsv" class="btn btn-sm btn-outline-secondary me-1" type="button">Load from csv</a>
+        <a asp-action="Orders" class="btn btn-outline-success me-1" type="button">Orders</a>
+        <a asp-action="Shipments" class="btn btn-outline-success me-1" type="button">Shipments</a> 
     </form>
 </nav> 
 <table class="table table-striped table-bordered table-sm">
